--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,16 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardapio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.5">
+    <link rel="shortcut icon" href="../src/assets/logo.webp" type="image/webp">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
+    <link rel="canonical" href="https://cardapieifacil.com/">
+    <meta property="og:url" content="https://cardapieifacil.com/">
+    <meta property="og:site_name" content="Cardápiei Facil">
+    <meta name="description" content="Tenha um cardápio digital atraente e fácil de gerenciar para compartilhar seus produtos na palma da mão dos seus clientes! Saiba mais agora!">
+    <title>Cardápiei fácil</title>
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
   </body>
 </html>
