--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.5">
-    <link rel="shortcut icon" href="../src/assets/logo.webp" type="image/webp">
+    <link rel="icon" href="./logo.webp" type="image/webp">
     <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
     <link rel="canonical" href="https://cardapieifacil.com/">
     <meta property="og:url" content="https://cardapieifacil.com/">
     <meta property="og:site_name" content="Cardápiei Facil">
     <meta name="description" content="Tenha um cardápio digital atraente e fácil de gerenciar para compartilhar seus produtos na palma da mão dos seus clientes! Saiba mais agora!">
     <title>Cardápiei fácil</title>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Cardápiei fácil",
+        "url": "https://www.cardapieifacil.com",
+        "logo": "https://www.cardapieifacil.com/logo.webp"
+      }
+      </script>
   </head>
   <body>
     <main id="root"></main>
